--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,8 @@ Maintainer: Mario Izquierdo (mariodebian) <mariodebian@gmail.com>
 Build-Depends: debhelper (>= 4.0.0), python, python-support, cdbs
 Standards-Version: 3.6.2
 XS-Python-Version: >= 2.4
+Vcs-Git: http://tcosproject.org/git/jclic-browser.git
+Vcs-Browser: http://tcosproject.org/cgit/cgit.cgi/jclic-browser.git/
 
 Package: jclic-browser
 Architecture: any
